src/test/ui/single-use-lifetime/one-use-in-inherent-impl-header.stderr
error: lifetime parameter `'f` only used once
  --> $DIR/one-use-in-inherent-impl-header.rs:12:6
   |
LL | impl<'f> Foo<'f> {
   |      ^^      -- ...is used only here
   |      |
   |      this lifetime...
   |
note: lint level defined here
  --> $DIR/one-use-in-inherent-impl-header.rs:1:9
   |
LL | #![deny(single_use_lifetimes)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

